argocd/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: disable-content-type
spec:
  contentType:
    autoDetect: false
